・DAVE対応 ・Java 25移行